--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Purpose: The purpose of this homework is to gain a better understanding of basic
 -->
 <title>Amila Bahor</title>
     <link rel="stylesheet" href="cv.css"> 
- <link  href="https://qph.fs.quoracdn.net/main-raw-68871915-bzqdxizcpkgbkvjprlufslxswbywxepe.jpeg">
+ <link  href="image.jpg">
  <div class="navigationbar">
         <a href="#about">About</a>
         <a href="#education">CV</a>
